--- a/templates/home.html
+++ b/templates/home.html
@@ -1,107 +1,68 @@
-<!doctype html>
-<html lang="en">
+{% extends 'header.html' %}
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
-  <title>Rahul</title>
-</head>
-
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">Rahul A R</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-link" href="/about">about</a>
-        <a class="nav-link" href="/projects">projects</a>
-        <a class="nav-link" href="contact">contact</a>
-
+{% block content %}
+{% load static%}
+<div class="alert alert-success mb-0 " role="alert">
+  Hello visitor,l'm looking for fulltime JOB,feel free to contact!
+</div>
+<div class="container-fluid, my-0">
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="{%static 'img/slider1.jpg'%}" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="{%static 'img/slider2.jpg'%}" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="{%static 'img/slider3.jpg'%}" class="d-block w-100" alt="...">
       </div>
     </div>
-  </nav>
-  <div class="alert alert-success " role="alert">
-     Hello visitor,l'm looking for fulltime JOB,feel free to contact!
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
-  <div class="container-fluid, my-0">
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="https://source.unsplash.com/900x300/?progamming,django" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="https://source.unsplash.com/900x300/?coding,webdevelpment" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="https://source.unsplash.com/900x300/?computer,keyboard" class="d-block w-100" alt="...">
-        </div>
+</div>
+<div class="container my-3">
+  <h2 class="text-center my-3">Me at a glance</h2>
+  <div class="card-deck">
+    <div class="card">
+      <img src="https://source.unsplash.com/700x300/?coder,desingner" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">WEB DEVELOPMENT</h5>
+        <p class="card-text">Creating custom responsive website layout/user. Writing well designed, testable, efficient
+          code with network diagnostics, network analytics tools and Search Engine Optimization process.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
     </div>
-  </div>
-  <div class="container my-3">
-    <h2 class="text-center my-3">Me at a glance</h2>
-    <div class="card-deck">
-      <div class="card">
-        <img src="https://source.unsplash.com/700x300/?coder,desingner" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">WEB DEVELOPMENT</h5>
-          <p class="card-text">Creating custom responsive website layout/user. Writing well designed, testable, efficient code with network diagnostics, network analytics tools and Search Engine Optimization process.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        </div>
+    <div class="card">
+      <img src="https://source.unsplash.com/700x300/?motorcycle" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">MOTORCYCLIST</h5>
+        <p class="card-text">Any query about motorcyle will solved,feel free to contact </p>
+        <p class="card-text"><small class="text-muted">Last updated 4 mins ago</small></p>
       </div>
-      <div class="card">
-        <img src="https://source.unsplash.com/700x300/?motorcycle" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">MOTORCYCLIST</h5>
-          <p class="card-text">Any query about motorcyle will solved,feel free to contact </p>
-          <p class="card-text"><small class="text-muted">Last updated 4 mins ago</small></p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://source.unsplash.com/700x300/?techy,imageeditor" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">IMAGE EDITOR</h5>
-          <p class="card-text">Creative department and use tools like Photoshop and Lightroom are used photo editing software programs.work closely with creative, marketing, and social media teams to edit and prepare images for social media uploads, such as for LinkedIn, Facebook and Instagram </p>
-          <p class="card-text"><small class="text-muted">Last updated 6 mins ago</small></p>
-        </div>
+    </div>
+    <div class="card">
+      <img src="https://source.unsplash.com/700x300/?techy,imageeditor" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">IMAGE EDITOR</h5>
+        <p class="card-text">Creative department and use tools like Photoshop and Lightroom are used photo editing
+          software programs.work closely with creative, marketing, and social media teams to edit and prepare images for
+          social media uploads, such as for LinkedIn, Facebook and Instagram </p>
+        <p class="card-text"><small class="text-muted">Last updated 6 mins ago</small></p>
       </div>
     </div>
   </div>
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"></script>
-</body>
-
-</html>
+</div>
+{% endblock %}
