--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,8 @@
 {% extends 'header.html' %}
-
+{% block activeabout %}active{% endblock activeabout %}
 {% block content %}
 {% load static%}
+
 <div class="container my-3">
   <h2 class="text-center my-3">About</h2>
   <div class="card-deck">
