--- a/templates/header.html
+++ b/templates/header.html
@@ -23,10 +23,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="/about">about</a>
-            <a class="nav-link" href="/projects">projects</a>
-            <a class="nav-link" href="contact">contact</a>
+            <a class="nav-link {% block activehome %}{% endblock activehome %}" href="/">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link {% block activeabout %}{% endblock activeabout %}" href="/about">about</a>
+            <a class="nav-link {% block activeprojects %}{% endblock activeprojects %}" href="/projects">projects</a>
+            <a class="nav-link {% block activecontact %}{% endblock activecontact %}" href="contact">contact</a>
     
           </div>
         </div>
