--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,9 +1,10 @@
 {% extends 'header.html' %}
-
+{% block activecontact %}active{% endblock activecontact %}
 {% block content %}
 {% load static%}
-  <div class="container">
-    <h2 class="text-center">Contact</h2>
+
+  <div class="container my-3">
+    <h2 class="text-center my-3">Contact</h2>
     
     <form action="/contact" method="POST">
     {% csrf_token %}
