--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,8 @@
 {% extends 'header.html' %}
-
+{% block activehome %}active{% endblock activehome %}
 {% block content %}
 {% load static%}
+
 <div class="alert alert-success mb-0 " role="alert">
   Hello visitor,l'm looking for fulltime JOB,feel free to contact!
 </div>
