--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,7 +1,8 @@
 {% extends 'header.html' %}
-
+{% block activeprojects %}active{% endblock activeprojects %}
 {% block content %}
 {% load static%}
+
     <div class="container my-3">
       <h2 class="text-center my-3">Projects</h2>
       <div class="card-deck">
