--- a/templates/header.html
+++ b/templates/header.html
@@ -16,7 +16,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">Rahul A R</a>
+        <a class="navbar-brand" href="/"><h3>Rahul A R</h3></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -34,6 +34,16 @@
 
 {% block content %}
 {% endblock %}
+
+
+<!-- Footer -->
+<footer class="page-footer font-small bg-dark darken-3">
+    <!-- Copyright -->
+    <div class="footer-copyright text-light text-center py-3">© 2020 Copyright
+    </div>
+</footer>
+  <!-- Footer -->
+
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
